--- a/css/styles.css
+++ b/css/styles.css
@@ -18,7 +18,7 @@ h3,
 h4,
 h5,
 h6,
-a, ul {
+a, ul, form, input, textarea {
 	margin: 0;
 	padding: 0;
 }
@@ -346,6 +346,7 @@ ul {
 	display: flex;
 	flex-direction: row;
 	align-items: baseline;
+	justify-content: space-between;
 	
 }
 .basement-increase {
@@ -380,4 +381,214 @@ a.baner-basement {
 }
 .social-icon-another:hover, .social-icon-another:focus {
 	background-color: #31d0aa;
+}
+.subscribe-button {
+		position: relative;
+		display: flex;
+		align-items: center;
+		justify-content: center;
+		
+		gap: 16px;
+}
+.subscribe-button-image {
+	position: absolute;
+	bottom: 8px;
+		right: 24px;
+	fill: #fff;
+}
+.subscribe-form-one {
+	display: flex;
+	gap: 24px;
+}
+.subscribe-email-input {
+		border: 1px solid #fff;
+		border-radius: 4px;
+		width: 264px;
+		height: 40px;
+		box-shadow: 0 4px 4px 0 rgba(0, 0, 0, 0.15);
+		font-weight: 400;
+		font-size: 12px;
+		line-height: 2;
+		letter-spacing: 0.04em;
+		color: #fff;
+		background-color: transparent;
+		outline: none;
+		padding: 8px 16px;
+
+	
+}
+.subscribe-email-input::placeholder {
+	font-weight: 400;
+		font-size: 12px;
+		line-height: 2;
+		letter-spacing: 0.04em;
+		color: #fff;
+}
+.subscribe-button-end {
+		border-radius: 4px;
+		padding: 8px 24px;
+		width: 165px;
+		height: 40px;
+		background-color: #4d5ae5;;
+		color: #fff;
+		align-self: self-end;
+		text-align: start;
+		cursor: pointer;
+}
+/* Popap */
+
+.popap-wrapper {
+	position: fixed;
+	top: 0;
+	left: 0;
+	height: 100%;
+	width: 100%;
+	background: rgba(46, 47, 66, 0.4);
+	
+
+	opacity: 0;
+	visibility: hidden;
+	pointer-events: none;
+}
+.popap-card {
+		width: 408px;
+		/* height: 584px; */
+		position: absolute;
+		top: 50%;
+		left: 50%;
+		box-shadow: 0 1px 1px 0 rgba(0, 0, 0, 0.14), 0 1px 3px 0 rgba(0, 0, 0, 0.12), 0 2px 1px 0 rgba(0, 0, 0, 0.2);
+		background: #fcfcfc;
+		border-radius: 4px;
+		transform: translate(-50%, -50%);
+		padding: 24px;
+}
+.popap-fields, .popap-card-fields {
+	display: flex;
+		flex-direction: column;
+}
+.popap-fields {
+	gap: 8px;
+	margin-bottom: 16px;
+}
+.popap-card-fields {
+	gap: 4px;
+	
+	
+}
+.popap-card-fields label {
+	font-weight: 400;
+		font-size: 12px;
+		line-height: 1.16667;
+		letter-spacing: 0.04em;
+		color: #8e8f99;
+}
+.popap-card-text {
+	border: 1px solid rgba(46, 47, 66, 0.4);
+		border-radius: 4px;
+		width: 100%;
+		height: 40px;
+		outline: none;
+		padding: 8px 16px 8px 38px;
+		transition: border 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+.popap-card-comment {
+	padding-left: 16px;
+}
+.popap-card-text::placeholder {
+	color: rgba(46, 47, 66, 0.4);
+}
+.popap-card-text:hover, .popap-card-text:focus {
+	border: 1px solid #4d5ae5;
+}
+
+.popap-icon-absolut:has(input:hover), .popap-icon-absolut:has(input:focus) .popap-text-men{
+	fill: #4d5ae5;
+}
+ 
+.popap-card-comment {
+		width: 100%;
+		height: 120px;
+		resize: none;
+}
+.popap-title {
+	margin: 0 auto 16px;
+}
+.popap-close {
+	margin-left: auto;
+	margin-bottom: 24px;
+	width: 24px;
+	height: 24px;
+	border-radius: 50%;
+	cursor: pointer;
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	background-color: rgba(0, 0, 0, 0.1);
+	border: 1px solid rgba(46, 47, 66, 0.1);
+	transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
+			   	color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+.popap-close-image {
+		stroke-width: 1px;
+		stroke: rgba(0, 0, 0, 0.1);
+
+}
+.popap-close:hover, .popap-close:hover  {
+	background-color: #404BBF;
+	fill: #fff;
+
+}
+
+
+.popap-icon-absolut {
+	position: relative;
+}
+.popap-text-men {
+	position: absolute;
+	top: 8px;
+	left: 16px;
+	transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+.popap-check {
+	margin-bottom: 24px;
+	
+}
+.popap-check-box-tru {
+	display: inline-block;
+	border-radius: 2px;
+	border: 1px solid rgba(46, 47, 66, 0.4);
+	width: 16px;
+	height: 16px;
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+.popap-check-conteiner {
+	display: flex;
+	justify-content: flex-start;
+	align-items: center;
+	gap: 8px;
+	font-weight: 400;
+	font-size: 12px;
+	line-height: 1.16667;
+	letter-spacing: 0.04em;
+	color: #8e8f99;
+	cursor: pointer;
+}		
+.popap-check input:checked ~ .popap-check-box-tru {
+	background-color: #404bbf;
+}
+.popap-check-box-image {
+	fill: #fff;
+}
+.privacy-policy {
+	line-height: 1.33;
+	text-decoration: underline;
+	color: #4d5ae5;
+}
+
+.is-open {opacity: 1;
+	visibility:visible;
+	pointer-events:visible;
 }
