--- a/css/styles.css
+++ b/css/styles.css
@@ -443,21 +443,21 @@ a.baner-basement {
 	left: 0;
 	height: 100%;
 	width: 100%;
-	background: rgba(46, 47, 66, 0.4);
-	
+	background-color: rgba(46, 47, 66, 0.4);
 
 	opacity: 0;
 	visibility: hidden;
 	pointer-events: none;
+	transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1), 
+	visibility 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .popap-card {
 		width: 408px;
-		/* height: 584px; */
 		position: absolute;
 		top: 50%;
 		left: 50%;
 		box-shadow: 0 1px 1px 0 rgba(0, 0, 0, 0.14), 0 1px 3px 0 rgba(0, 0, 0, 0.12), 0 2px 1px 0 rgba(0, 0, 0, 0.2);
-		background: #fcfcfc;
+		background-color: #fcfcfc;
 		border-radius: 4px;
 		transform: translate(-50%, -50%);
 		padding: 24px;
