--- a/css/styles.css
+++ b/css/styles.css
@@ -18,7 +18,7 @@ h3,
 h4,
 h5,
 h6,
-a, ul, form, input, textarea {
+a, ul, form, input, textarea, button {
 	margin: 0;
 	padding: 0;
 }
@@ -441,6 +441,7 @@ a.baner-basement {
 	position: fixed;
 	top: 0;
 	left: 0;
+	min-height: 584px;
 	height: 100%;
 	width: 100%;
 	background-color: rgba(46, 47, 66, 0.4);
@@ -448,8 +449,7 @@ a.baner-basement {
 	opacity: 0;
 	visibility: hidden;
 	pointer-events: none;
-	transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1), 
-	visibility 250ms cubic-bezier(0.4, 0, 0.2, 1);
+	transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .popap-card {
 		width: 408px;
@@ -460,7 +460,7 @@ a.baner-basement {
 		background-color: #fcfcfc;
 		border-radius: 4px;
 		transform: translate(-50%, -50%);
-		padding: 24px;
+		padding: 72px 24px;
 }
 .popap-fields, .popap-card-fields {
 	display: flex;
@@ -514,8 +514,9 @@ a.baner-basement {
 	margin: 0 auto 16px;
 }
 .popap-close {
-	margin-left: auto;
-	margin-bottom: 24px;
+	position: absolute;
+	top: 24px;
+	right: 24px;
 	width: 24px;
 	height: 24px;
 	border-radius: 50%;
@@ -523,20 +524,20 @@ a.baner-basement {
 	display: flex;
 	justify-content: center;
 	align-items: center;
-	background-color: rgba(0, 0, 0, 0.1);
-	border: 1px solid rgba(46, 47, 66, 0.1);
+	background-color: #e7e9fc;
+	border: 1px solid rgba(0, 0, 0, 0.1);
 	transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
-			   	color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+	 border 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .popap-close-image {
 		stroke-width: 1px;
 		stroke: rgba(0, 0, 0, 0.1);
 
 }
-.popap-close:hover, .popap-close:hover  {
+.popap-close:hover, .popap-close:focus  {
 	background-color: #404BBF;
 	fill: #fff;
-
+	border: none;
 }
 
 
@@ -548,6 +549,7 @@ a.baner-basement {
 	top: 8px;
 	left: 16px;
 	transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+	
 }
 .popap-check {
 	margin-bottom: 24px;
