--- a/css/styles.css
+++ b/css/styles.css
@@ -441,7 +441,6 @@ a.baner-basement {
 	position: fixed;
 	top: 0;
 	left: 0;
-	min-height: 584px;
 	height: 100%;
 	width: 100%;
 	background-color: rgba(46, 47, 66, 0.4);
@@ -449,10 +448,11 @@ a.baner-basement {
 	opacity: 0;
 	visibility: hidden;
 	pointer-events: none;
-	transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+	transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1), visibility 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .popap-card {
 		width: 408px;
+		min-height: 584px;
 		position: absolute;
 		top: 50%;
 		left: 50%;
@@ -462,7 +462,7 @@ a.baner-basement {
 		transform: translate(-50%, -50%);
 		padding: 72px 24px;
 }
-.popap-fields, .popap-card-fields {
+.popap-fields {
 	display: flex;
 		flex-direction: column;
 }
@@ -470,10 +470,8 @@ a.baner-basement {
 	gap: 8px;
 	margin-bottom: 16px;
 }
-.popap-card-fields {
-	gap: 4px;
-	
-	
+.transform {
+	transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .popap-card-fields label {
 	font-weight: 400;
@@ -481,6 +479,7 @@ a.baner-basement {
 		line-height: 1.16667;
 		letter-spacing: 0.04em;
 		color: #8e8f99;
+		margin-bottom: 4px;
 }
 .popap-card-text {
 	border: 1px solid rgba(46, 47, 66, 0.4);
@@ -512,6 +511,12 @@ a.baner-basement {
 }
 .popap-title {
 	margin: 0 auto 16px;
+	font-weight: 500;
+		font-size: 16px;
+		line-height: 1.5;
+		letter-spacing: 0.02em;
+		text-align: center;
+		color: #2e2f42;
 }
 .popap-close {
 	position: absolute;
@@ -547,13 +552,20 @@ a.baner-basement {
 .popap-text-men {
 	position: absolute;
 	top: 8px;
-	left: 16px;
-	transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
-	
+	left: 16px;	
 }
 .popap-check {
 	margin-bottom: 24px;
 	
+}
+.popap-text-all {
+	font-weight: 400;
+		font-size: 12px;
+		line-height: 1.17;
+		letter-spacing: 0.04em;
+		color: #8e8f99;
+		display: block;
+		margin-bottom: 4px;
 }
 .popap-check-box-tru {
 	display: inline-block;
@@ -564,7 +576,7 @@ a.baner-basement {
 	display: flex;
 	justify-content: center;
 	align-items: center;
-	transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+	
 }
 .popap-check-conteiner {
 	display: flex;
