--- a/css/styles.css
+++ b/css/styles.css
@@ -388,9 +388,9 @@ a.baner-basement {
 	fill: #fff;
 }
 .subscribe-form-one {
-	/* display: flex;
-	justify-content: space-between; */
-	/* gap: 24px; */
+	display: flex;
+	justify-content: space-between; 
+	 gap: 24px; 
 }
 .subscribe-email-input {
 		border: 1px solid #fff;
