--- a/css/styles.css
+++ b/css/styles.css
@@ -467,7 +467,10 @@ a.baner-basement {
 .popap-fields {
 	margin-bottom: 8px;
 }
-
+.popap-fields-last {
+	margin-bottom: 16px;
+	line-height: 1.17;
+}
 .transform {
 	transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
@@ -490,7 +493,7 @@ a.baner-basement {
 		background-color: transparent;
 		transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 		font-weight: 400;
-			
+		
 }
 .popap-card-comment {
 	padding: 8px 16px;
@@ -503,7 +506,7 @@ a.baner-basement {
 		border: 1px solid rgba(46, 47, 66, 0.4);
 		background-color: transparent;
 		transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
-		margin-bottom: 16px;
+		
 }
 .popap-card-text::placeholder {
 	color: rgba(46, 47, 66, 0.4);
@@ -579,7 +582,6 @@ a.baner-basement {
 		margin-bottom: 4px;
 }
 .popap-check-box-tru {
-	display: inline-block;
 	border-radius: 2px;
 	border: 1px solid rgba(46, 47, 66, 0.4);
 	width: 16px;
@@ -588,6 +590,7 @@ a.baner-basement {
 	justify-content: center;
 	align-items: center;
 	fill: transparent;
+	transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1), border 250ms cubic-bezier(0.4, 0, 0.2, 1), fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .popap-check-conteiner {
 	display: flex;
@@ -603,10 +606,10 @@ a.baner-basement {
 }		
 .popap-check input:checked ~ .popap-check-box-tru {
 	background-color: #404bbf;
+	border: none;
+	fill: #F4F4FD;;
 }
-.popap-check-box-image {
-	fill: #fff;
-}
+
 .privacy-policy {
 	line-height: 1.33;
 	text-decoration: underline;
