--- a/css/styles.css
+++ b/css/styles.css
@@ -593,7 +593,7 @@ a.baner-basement {
 	transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1), border 250ms cubic-bezier(0.4, 0, 0.2, 1), fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .popap-check-conteiner {
-	display: flex;
+	display: inline-flex;
 	justify-content: flex-start;
 	align-items: center;
 	gap: 8px;
@@ -603,6 +603,7 @@ a.baner-basement {
 	letter-spacing: 0.04em;
 	color: #8e8f99;
 	cursor: pointer;
+	line-height: 1.17;
 }		
 
 .popap-check:has(input:checked) .popap-check-box-tru {
