--- a/css/styles.css
+++ b/css/styles.css
@@ -593,7 +593,7 @@ a.baner-basement {
 	transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1), border 250ms cubic-bezier(0.4, 0, 0.2, 1), fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .popap-check-conteiner {
-	display: inline-flex;
+	display: flex;
 	justify-content: flex-start;
 	align-items: center;
 	gap: 8px;
